class Ability:
    def clean_up(self):
        pass
