class Question:
    def answered_by(self, actor):
        pass
